[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Chain-neutral domain types and wallet abstractions for crypto deposits"
license = "MIT"

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
num-bigint = "0.4"
thiserror = "2"
zeroize = "1"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
