[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Chain-neutral domain types and wallet abstractions for crypto deposits"
license = "MIT"

[dependencies]
async-trait = "0.1"
bitcoin = { version = "0.32", features = ["rand-std"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
zeroize = "1"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
